added random function and buttons

--- a/RDIP/Codes/index.html
+++ b/RDIP/Codes/index.html
@@ -13,7 +13,14 @@
             <option value="1">English</option>
             <option value="2">Hindi</option>
         </select>
-        <p hidden id="text">Form a sentence (Declarative or Interrogative or any other type) from the given words<br><i>(select the buttons in proper order)</i></p>
+    <div>
+        <p hidden id="text">
+            Form a sentence (Declarative or Interrogative or any other type) from the given words<br>
+            <i>(select the buttons in proper order)</i>
+        </p>
+    </div>  
+    <div id="but" hidden>
+    </div>
     </div>
     <script src="/script.js"></script>
 </body>
