Functionality of reform sentence and buttons added

--- a/RDIP/Codes/index.html
+++ b/RDIP/Codes/index.html
@@ -13,14 +13,22 @@
             <option value="1">English</option>
             <option value="2">Hindi</option>
         </select>
-    <div>
-        <p hidden id="text">
-            Form a sentence (Declarative or Interrogative or any other type) from the given words<br>
-            <i>(select the buttons in proper order)</i>
-        </p>
-    </div>  
-    <div id="but" hidden>
-    </div>
+        <div>
+            <p hidden id="text">
+                <b>Form a sentence (Declarative or Interrogative or any other type) from the given words</b><br>
+                <i>(select the buttons in proper order)</i>
+            </p>
+            <div hidden id="but">
+            </div>
+            <p hidden id="text2">
+                <b>Formed Sentence</b><br>               
+                <i>(after selecting the words)</i>
+            </p>
+            <h3 hidden id="textBut">
+            </h3>
+            <button hidden id="reformBut">Re-form the sentence
+            </button>
+        </div>
     </div>
     <script src="/script.js"></script>
 </body>
