Reform sentence button working

--- a/RDIP/Codes/index.html
+++ b/RDIP/Codes/index.html
@@ -26,7 +26,7 @@
             </p>
             <h3 hidden id="textBut">
             </h3>
-            <button hidden id="reformBut">Re-form the sentence
+            <button hidden id="reformBut" onclick="reformFun()">Re-form the sentence
             </button>
         </div>
     </div>
