Check Correctness button added

--- a/RDIP/Codes/index.html
+++ b/RDIP/Codes/index.html
@@ -27,7 +27,11 @@
             <h3 hidden id="textBut">
             </h3>
             <button hidden id="reformBut" onclick="reformFun()">Re-form the sentence
+            </button><br><br>
+            <button hidden id="checkBut" onclick="checkFun()">Check the correctness of this sentence
             </button>
+            <h4 hidden id="correctAns">
+            </h4>
         </div>
     </div>
     <script src="/script.js"></script>
