added functionality of Get correct sentence and toggle between hide sentence

--- a/RDIP/Codes/index.html
+++ b/RDIP/Codes/index.html
@@ -38,8 +38,10 @@
                     Wrong Answer!!!
                 </h2>
             </div>
-            <button hidden id = "getCorrectBut">Get Correct Sentence
-            </button>
+            <button hidden id = "getCorrectBut" onclick="getCorrectFun()">Get Correct Sentence
+            </button><br><br>
+            <div hidden id="correctSen">
+            </div>
         </div>
     </div>
     <script src="/script.js"></script>
